tests/syntax/good/testfile-ident-2.go
package main

func main() { _42 := 42 }
