tests/syntax/bad/testfile-semicolon-5.go
package main

func main() {
  x
  / 2
}
